@@ -55,6 +55,7 @@ S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.cforest)
 S3method(makeRLearner,classif.ctree)
+S3method(makeRLearner,classif.extraTrees)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
@@ -102,6 +103,7 @@ S3method(makeRLearner,regr.ctree)
 S3method(makeRLearner,regr.cubist)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.elmNN)
+S3method(makeRLearner,regr.extraTrees)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glmnet)
@@ -172,6 +174,7 @@ S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.cforest)
 S3method(predictLearner,classif.ctree)
+S3method(predictLearner,classif.extraTrees)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
@@ -218,6 +221,7 @@ S3method(predictLearner,regr.ctree)
 S3method(predictLearner,regr.cubist)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.elmNN)
+S3method(predictLearner,regr.extraTrees)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glmnet)
@@ -330,6 +334,7 @@ S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.cforest)
 S3method(trainLearner,classif.ctree)
+S3method(trainLearner,classif.extraTrees)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
@@ -376,6 +381,7 @@ S3method(trainLearner,regr.ctree)
 S3method(trainLearner,regr.cubist)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.elmNN)
+S3method(trainLearner,regr.extraTrees)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glmnet)
