@@ -26,10 +26,12 @@ mlr_2.3:
 -- PreprocWrapperCaret
 
 - new learners:
+-- classif.extraTrees
 -- classif.xgboost
 -- regr.bartMachine
 -- regr.cubist
 -- regr.elmNN
+-- regr.extraTrees
 -- regr.xgboost
 -- surv.rpart
 
